# grunt-cli

./: README.md  ROADMAP.md  bootstrap.sh  install.sh  mise.toml  pyproject.toml
grunt_cli/: __init__.py  helpers.py  main.py
grunt_cli/commands/: app.py  auth.py  db.py  doctype.py  fixtures.py  init.py  install.py  master.py  migrate.py  serve.py  shell.py  site.py  sites.py  test.py  update.py  users.py
grunt_cli/templates/: README.md.j2  gitignore.j2  grunt_app.py.j2  hooks.py.j2  install.py.j2  routes.py.j2  tasks.py.j2
grunt_cli/utils/: __init__.py  boilerplate.py
tests/: test_commands.py  test_helpers.py
