[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grunt-cli"
version = "0.1.1"
description = "CLI tool for Grunt — metadata-driven application framework"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
]

[project.scripts]
grunt = "grunt_cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
